--- a/admin/src/Components/Sidebar/sidebar.scss
+++ b/admin/src/Components/Sidebar/sidebar.scss
@@ -46,6 +46,7 @@
   
           &:hover {
             background-color: #ece8ff;
+            border-radius: 5px;
           }
   
           .icon {
