--- a/admin/src/Components/Sidebar/sidebar.scss
+++ b/admin/src/Components/Sidebar/sidebar.scss
@@ -9,6 +9,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
+      .link {
+        text-decoration: none;
+      }
   
       .logo {
         font-size: 20px;
